SERVER-16133 Use RESOURCE_METADATA X lock to set the multiKey index value

This avoids the need to do deadlock detection and as a nice side effect
would prevent the scary deadlock messages from showing in the log.

Also, is a matter of correctness, we should not be setting the _isMultiKey
field to TRUE until the transaction commits.